mp2vue： 可以显示了